hphp/hack/test/typecheck/reactive/parse_multiple4.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

class C {
  <<__Rx, __Rx>>
  public function f(): void {}
}
